# langchain

./: .gitignore
code-with-brandon-masterclass/: pyproject.toml
code-with-brandon-masterclass/1_chat_models/: 5_chat_model_save_message_history_firebase.py
code-with-brandon-masterclass/2_prompt_templates/: 1_prompt_template_basic.py
code-with-brandon-masterclass/3_chains/: 4_chains_parallel.py  5_chains_branching.py
code-with-brandon-masterclass/4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2b_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py  4_rag_embedding_deep_dive.py  5_rag_retriever_deep_dive.py
coding-crash-course/: 00_basics.js  01_first_chain.js  package-lock.json  package.json
functions-tools-agents/: OpenAI_Function_Calling.ipynb  lcel.ipynb  openai_langchain.ipynb
gen-ui-js/: package-lock.json  package.json
gen-ui-js/ai/: graph.tsx
gen-ui-js/app/: agent.tsx  shared.tsx
gen-ui-js/utils/: server.tsx
gen-ui-python/backend/: chain.py
genai-freeCodeCamp/langchain/: langchain.ipynb  requirements.txt
genai-freeCodeCamp/project1/: langchain.ipynb
how-to-js/: package-lock.json  package.json  structured-output.js
langchain-official-javascript/agent/: package-lock.json  package.json
langchain-official-javascript/chatbot/: chat-model.js  conversationHistory.js  messageHIstory.js  package.json  streaming.js
langchain-official-javascript/langchain-with-js/: 01_first-chain.js  02_simple_sequential_chain.js  (+1 more)
llm-app-deeplearning/: app.js  expression-language.js  package-lock.json  package.json  question-answers.js  rag.js
(+34 files in other folders)
